[Analyze-1468] Skeleton code for webapi function (#641)
* initial commit for webapi function

* add description for swagger documentation

* update securityscheme

* remove unused keys

* add generate cohort endpoint

* add logic for cohort definition creation and generate cohort job

* fix generate cohort endpoint

* fix cohort generator job

* fix generate cohort

* rename webapi to d2e-webapi

* fix route prefix

* add more skeleton conceptset endpoints

* add more skeleton conceptset endpoints

* add d2e-webapi to CODEOWNERS

---------
